--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -114,8 +114,8 @@
                     </svg>
                 </p>
                 <p class="text-small">A proficient <span class="type-animate"></span></p>
-                <div class="connect">
-                    <a href="https://github.com/Oliver-CodeRepo/"><i class="fab fa-git"></i></a>
+                <div class="connect" style='color:white'>
+                    <a href="https://github.com/Oliver-CodeRepo/"><i class="fab fa-github"></i></a>
                     <a href="https://www.facebook.com/oliver.mulaku"><i class="fab fa-facebook"></i></a>
                     <a href="https://twitter.com/himself_oliver?s=09"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/in/oliver-mulaku-715390161"><i class="fab fa-linkedin"></i></a>
@@ -208,11 +208,12 @@
                                             <li>
                                                 <i>Web back-end</i> - I am proficient in python django framework languange in matters web back-end development. I also work with structural PHP, MySQL and currently learning javascript react native.
                                             </li>
+                                            <li>Link to <a href="https://github.com/Oliver-CodeRepo/" style="text-decoration:underline; font-style:italic">Github repository</a> for some of my work</li>
                                         </ul>
                                     </li><br>
                                     <li>
                                         <b style="color:dodgerblue">Graphic Designing:</b> <br>
-                                        With self taught knowledge and skills I have developed Logos and graphic design for different clients. <a href="https://drive.google.com/folderview?id=1ALby2uEB1Hez8nN0ZPO52v8_clLOhNkS">Click here</a> to see some of my designs.
+                                        With self taught knowledge and skills I have developed Logos and graphic design for different clients. <a href="https://drive.google.com/folderview?id=1ALby2uEB1Hez8nN0ZPO52v8_clLOhNkS" style="text-decoration:underline; font-style:italic">Click here</a> to see some of my designs.
                                     </li><br>
                                     <li>
                                         <b style="color:dodgerblue">Computer Repairs and maintenance:</b> <br>
@@ -398,12 +399,9 @@
     <section class="footer" style="background-color: #112f57; color: white; padding: 40px; text-align: center; font-family:calibri">
         <div class="max-width">
             <div>
-                <p style="font-size: 17px">Portfolio designed and developed by Oliver Mulaku. <br> All rights reserved Copyright &copy;2021. 
-                    <!-- <script>
-                        let getDate = Date.now();
-                        let getYear = getDate/(365*);
-                        console.log(getYear); 
-                    </script> -->
+                <p style="font-size: 17px">
+                    Portfolio designed and developed by Oliver Mulaku. <br> 
+                    All rights reserved Copyright &copy; {{ getYear }}.                     
                  </p>
             </div>
         </div>
