--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -295,6 +295,7 @@
                         <img src="{% static 'images/myLogo.png' %}" alt="">
                         <div class="text">My Portfolio</div>
                         <p>This site is one of my complete project developed and designed in django, HTML, core CSS, Vanilla Javascript and Jquery.<br> Credits to Oliver Mulaku</p>
+                        <a href="https://github.com/Oliver-CodeRepo/Oliver-Mulaku-Profile/" class='btn'><i class="fab fa-github"></i> View in Github</a>
                     </div>
                 </div>
                 <div class="card">
@@ -302,6 +303,7 @@
                         <img src="{% static 'images/plantG.jpg' %}" alt="">
                         <div class="text">iAgro solution Portfolio</div>
                         <p>This Web based site was developed and designed in HTML, core CSS, PHP, MySQL, Vanilla Javascript and Jquery. This was my final yer project.<br> Credits to Oliver Mulaku</p>
+                        <a href="https://github.com/Oliver-CodeRepo/iAgro-Portfolio-Solutions-/" class='btn'><i class="fab fa-github"></i> View in Github</a>
                     </div>
                 </div>
                 <div class="card">
@@ -309,6 +311,7 @@
                         <img src="{% static 'images/rate-us.png' %}" alt="">
                         <div class="text">Product Rating App</div>
                         <p>This is a web-based application focused on rating products designed in HTML, Bootstrap CSS framework and Django framework<br> Credits to Oliver Mulaku</p>
+                        <a href="https://github.com/Oliver-CodeRepo/product-rating/" class='btn'><i class="fab fa-github"></i> View in Github</a>
                     </div>
                 </div>
                 <div class="card">
@@ -316,6 +319,7 @@
                         <img src="{% static 'images/bike.jpg' %}" alt="">
                         <div class="text">DTVP Site</div>
                         <p>DTVP is a web-based site developed and designed in HTML, core CSS, PHP and MySQL. <br> Credits to Oliver Mulaku and Mathias Kyalo </p>
+                        <a href="https://github.com/Oliver-CodeRepo/DTVP/" class='btn'><i class="fab fa-github"></i> View in Github</a>
                     </div>
                 </div>
             </div>
@@ -387,7 +391,7 @@
                             <textarea name="description" id="" cols="30" rows="4" placeholder="Describe Project.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit" disabled class="btn">Submit</button>
+                            <button type="submit" class="btn" disabled>Submit</button>
                         </div>
                     </form>
                 </div>
