--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -113,14 +113,15 @@
                         </g>
                     </svg>
                 </p>
-                <p class="text-small">A proficient <span class="type-animate"></span></p>
+                <p class="text-small">A proficient <span class="type-animate"></span></p><br>
                 <div class="connect" style='color:white'>
-                    <a href="https://github.com/Oliver-CodeRepo/"><i class="fab fa-github" style='margin-left:0px; color:cyan'></i></a>
-                    <a href="https://www.facebook.com/oliver.mulaku"><i class="fab fa-facebook" style='color:cyan'></i></a>
-                    <a href="https://twitter.com/himself_oliver?s=09"><i class="fab fa-twitter" style='color:cyan'></i></a>
-                    <a href="https://www.linkedin.com/in/oliver-mulaku-715390161"><i class="fab fa-linkedin" ></i></a>
-                    <a href="https://www.instagram.com/invites/contact/?i=1ra6n70tk3g3f&utm_content=2oidxdd"><i class="fab fa-instagram" ></i></a>
+                    <a href="https://github.com/Oliver-CodeRepo/"><i class="fab fa-github" style='margin-left:0px; color:white'></i></a>
+                    <a href="https://www.facebook.com/oliver.mulaku"><i class="fab fa-facebook" style='color:white'></i></a>
+                    <a href="https://twitter.com/himself_oliver?s=09"><i class="fab fa-twitter" style='color:white'></i></a>
+                    <a href="https://www.linkedin.com/in/oliver-mulaku-715390161"><i class="fab fa-linkedin" style='color:white'></i></a>
+                    <a href="https://www.instagram.com/invites/contact/?i=1ra6n70tk3g3f&utm_content=2oidxdd"><i class="fab fa-instagram" style='color:white'></i></a>
                 </div>
+                <br>
                 <a href="#contacts" class="btn">Hire Me</a>
             </div>
         </div>
