--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="navbar">
         <div class="max-width">
-            <div class="logo"><a href=""><img src="{% static 'images/myLogoNamed.png' %}" alt="" width="250" height="60"></a></div>
+            <div class="logo"><a href=""><img src="{% static 'images/myLogoNamed.png' %}" alt="" width="200" height="50"></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-bars">Home</a></li>
                 <li><a href="#about" class="menu-bars">About</a></li>
@@ -392,7 +392,7 @@
                             <textarea name="description" id="" cols="30" rows="4" placeholder="Describe Project.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit" class="btn" disabled>Submit</button>
+                            <button type="submit" class="btn"><i class='fas fa-cog fa-pulse'></i> Button not yet ready</button>
                         </div>
                     </form>
                 </div>
