--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -392,7 +392,7 @@
                             <textarea name="description" id="" cols="30" rows="4" placeholder="Describe Project.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit" class="btn" style='width:250px'><i class='fas fa-cog fa-pulse'></i> Button not yet ready</button>
+                            <button type="submit" class="btn" style='width:250px;'><i class='fas fa-cog fa-pulse'></i> Button not yet ready</button>
                         </div>
                     </form>
                 </div>
