--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -133,12 +133,12 @@
             <h1 class="title">About Me</h1>
             <div class="about-content">
                 <div class="column left">
-                    <img src="{% static 'images/me.jpg' %}" alt="">
+                    <img src="{% static 'images/portrait.jpg' %}" alt="Oliver_Portrait">
                 </div>
                 <div class="column right">
                     <div class="text">I am Oliver Mulaku and I'm a <span class="type-animate-2"></span></div>
                     <p>
-                        I am Laikipia University graduate where I pursued a Bachelor's degree in Information Communication Technology. I specialized in web development (full stack web-development) and graphic designing. I am in love with creativity. I tend to focus on the best user friendliness type of graphical User Interfaces (GUI). I believe in the ancronym KISS (Keep It Simple and Stupid) as far as UX (User Experience) is concerned.
+                        I am Laikipia University graduate where I pursued a Bachelor's degree in Information Communication Technology. I specialized in web development (full stack web-development), Data analysis (pandas and Matplotlib) and graphic designing. I am in love with creativity. I tend to focus on the best user friendliness type of graphical User Interfaces (GUI). I believe in the ancronym KISS (Keep It Simple and Stupid) as far as UX (User Experience) is concerned.
                     </p>
                     <a href="{% static 'docs/resume.pdf' %}" class="btn" download><i class='fa fa-download'></i> Download Resume</a>
                 </div>
@@ -163,6 +163,13 @@
                         <i class="fa fa-paint-brush"></i>
                         <div class="text">Graphic Design</div>
                         <p>I design simple, corprate and descriptive logos, posters and web graphics. <br> click <a href="https://drive.google.com/folderview?id=1ALby2uEB1Hez8nN0ZPO52v8_clLOhNkS">here See My Designs.</a></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Data Analysis</div>
+                        <p>I proficient in python libraries and tools in matter data analysis. I am more into Pandas and Matplotlib</a></p>
                     </div>
                 </div>
                 <div class="card">
