--- a/myprofileApp/templates/myprofileTemp/index.html
+++ b/myprofileApp/templates/myprofileTemp/index.html
@@ -169,7 +169,7 @@
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Data Analysis</div>
-                        <p>I proficient in python libraries and tools in matter data analysis. I am more into Pandas and Matplotlib libraries.</a></p>
+                        <p>I am proficient in python libraries and tools in matter data analysis. I am more into Pandas and Matplotlib libraries.</a></p>
                     </div>
                 </div>
                 <div class="card">
